added env translation, not done yet

--- a/lib/ft_printf/Makefile
+++ b/lib/ft_printf/Makefile
@@ -6,14 +6,22 @@
 #    By: nkuipers <nkuipers@student.codam.nl>         +#+                      #
 #                                                    +#+                       #
 #    Created: 2019/11/18 09:44:57 by nkuipers      #+#    #+#                  #
-#    Updated: 2020/09/23 10:33:19 by nkuipers      ########   odam.nl          #
+#    Updated: 2020/09/24 15:40:17 by nkuipers      ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = 		libftprintf.a
-SRCS = 		ft_parse_flags.c ft_printf_char.c ft_printf_hex.c ft_printf_hex_2.c \
-			ft_printf_int.c ft_printf_int_l.c ft_printf_int_ll.c ft_printf.c \
-			ft_printf_un.c ft_printf_string.c ft_printf_ptr.c 			
+SRCS = 		ft_parse_flags.c \
+			ft_printf_char.c \
+			ft_printf_hex.c \
+			ft_printf_hex_2.c \
+			ft_printf_int.c \
+			ft_printf_int_l.c \
+			ft_printf_int_ll.c \
+			ft_printf.c \
+			ft_printf_un.c \
+			ft_printf_string.c \
+			ft_printf_ptr.c
 CFILES		=	$(SRCS:%=srcs/%)
 OFILES		=	$(CFILES:.c=.o)
 INCLUDES	= ./includes
